--- a/ballGame/index.html
+++ b/ballGame/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Document</title>
-      <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
       <link rel="stylesheet" type="text/css" href="./style.css" />
    </head>
    <body>
