--- a/ballGame/index.html
+++ b/ballGame/index.html
@@ -8,7 +8,7 @@
    <body>
       <div class="space"></div>
       <div class="screen">
-         <div class="startbutton">
+         <div class="start_button">
             <h1>
               <div class="center">공피하기 게임</div>
             </h1>
